--- a/index.html
+++ b/index.html
@@ -10,8 +10,8 @@
 <body>
   <div class="principal">
   <img src="img/yo.jpg" class="imagen">
-  <p>Hi! I'm Jesus Gonzalez and my wife.! <br>
-      We are living in Barranquilla</p>
+  <p>Jesus Gonzalez <br>
+     Barranquilla</p>
   </div>
 </body>
 </html>
